<resources>
    <string name="app_name" translatable="false">SpeakOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_townhall">Create TownHall</string>
    <string name="date">Date</string>
    <string name="post">post</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="details">Details</string>
    <string name="create">Create</string>
    <string name="close">close</string>
    <string name="comment">Comment</string>
    <string name="add">add</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="view">view</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="vote">vote</string>
    <string name="andrew_id">Andrew ID</string>
    <string name="password">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="question">Question</string>
    <string name="edit">Edit</string>
    <string name="post_question">Type your Question Here</string>
    <string name="success_msg">Your question is successfully posted</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="have_account">I have an account</string>
</resources>