<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organizer.fragments.CreateTownHallFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200sp"
                android:layout_height="60sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/town_hall_date_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="date" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200sp"
                android:layout_height="60sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/town_hall_start_date_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="date" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:text="@string/end"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200sp"
                android:layout_height="60sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/town_hall_end_date_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="date" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:text="@string/details"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200sp"
                android:layout_height="150sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/town_hall_details_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/town_hall_start_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:text="@string/create"
                android:textSize="20sp" />

            <Button
                android:id="@+id/town_hall_close_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:text="@string/close"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>