<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".general.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andrew_id"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:hint="your andrew id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/andrew_id_login_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:hint="your password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_margin="30sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_txt"
                android:textSize="20sp" />
            />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signup_login_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textSize="20sp" />
            />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>